# keke-pet-v5

./: .hermes.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/: 可可桌宠_PRD_v2.0.md  可可桌宠_UI设计规格.md  可可桌宠_技术架构方案.md  可可桌宠_竞品调研与优化建议.md  可可桌宠_策划深度优化.md
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  journal.rs  lib.rs  main.rs  memory.rs  mood.rs
src-tauri/src/ai/: rule_engine.rs
src/modules/: audio.js  event-bus.js  live2d-renderer.js  renderer.js  skeleton.js  ui.js
src/styles/: main.css
