[package]
name = "keke-pet"
version = "0.1.0"
edition = "2021"

[lib]
name = "keke_pet_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "keke-pet"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.28", features = ["bundled"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
